--- a/index.html
+++ b/index.html
@@ -459,6 +459,30 @@
             </a>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="https://sketchfab.com/3d-models/chuckles-el-cerdito-0bbf3acf2bea4861a68a8380240217cd" target="_blank">
+              <div class="work-img">
+                <img src="img/Cerdito.PNG" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">MChuckles el Cerdito</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Modelo 3D</span> <!-- / <span class="w-date">18 Sep. 2018</span> -->
+                    </div>
+                  </div>
+                  <!-- <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div> -->
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
         <!-- <div class="col-md-4">
           <div class="work-box">
             <a href="img/work-6.jpg" data-lightbox="gallery-mf">
