--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">MChuckles el Cerdito</h2>
+                    <h2 class="w-title">Chuckles el Cerdito</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Modelo 3D</span> <!-- / <span class="w-date">18 Sep. 2018</span> -->
                     </div>
