se actualizo Lucas

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
           <div class="work-box">
             <a href="https://sketchfab.com/3d-models/lucas-13248533dba349caa769a2445fd97f2e" target="_blank">
               <div class="work-img">
-                <img src="img/Lucas.png" alt="" class="img-fluid">
+                <img src="img/Lucas1.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
