--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           <div class="work-box">
             <a href="https://sketchfab.com/3d-models/fourarms-ben-10-da739c7a067644a0b97e93a6f12b9523" target="_blank">
               <div class="work-img">
-                <img src="img/Fourarms.png" alt="" class="img-fluid">
+                <img src="img/Fourarmas1.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
