--- a/index.html
+++ b/index.html
@@ -389,16 +389,16 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://sketchfab.com/3d-models/dodge-challenger-66b7d467e4a84808adc3fc2f1cd9aa03" target="_blank">
+            <a href="https://www.behance.net/gallery/130957111/CV-animado" target="_blank">
               <div class="work-img">
-                <img src="img/Dodge.png" alt="" class="img-fluid">
+                <img src="img/CV.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Dodge Challenger</h2>
+                    <h2 class="w-title">CV animado</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Modelo 3D</span> <!-- / <span class="w-date">18 Sep. 2018</span> -->
+                      <span class="w-ctegory">Motion graphics</span> <!-- / <span class="w-date">18 Sep. 2018</span> -->
                     </div>
                   </div>
                   <!-- <div class="col-sm-4">
@@ -463,7 +463,7 @@
           <div class="work-box">
             <a href="https://sketchfab.com/3d-models/chuckles-el-cerdito-0bbf3acf2bea4861a68a8380240217cd" target="_blank">
               <div class="work-img">
-                <img src="img/Cerdito.PNG" alt="" class="img-fluid">
+                <img src="img/Chuckles.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
@@ -738,10 +738,10 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><img src="img/facebook.png" alt=""></span></a></li>
-                      <li><a href=""><span class="ico-circle"><img src="img/logotipo-de-instagram.png" alt=""></span></a></li>
-                      <li><a href=""><span class="ico-circle"><img src="img/tw.png" alt=""></span></a></li>
-                      <li><a href=""><span class="ico-circle"><img src="img/behance.png" alt=""></i></span></a></li>
+                      <!-- <li><a href=""><span class="ico-circle"><img src="img/facebook.png" alt=""></span></a></li> -->
+                      <li><a href="https://www.instagram.com/_brayan19__/"><span class="ico-circle"><img src="img/logotipo-de-instagram.png" alt=""></span></a></li>
+                      <li><a href="https://sketchfab.com/brayan.Aguirre"><span class="ico-circle"><img src="img/Sketcfab.png" alt=""></span></a></li>
+                      <li><a href="https://www.behance.net/brayanaguirre"><span class="ico-circle"><img src="img/behance.png" alt=""></i></span></a></li>
                     </ul>
                   </div>
                 </div>
