se corrigieron imagenes

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
           <div class="work-box">
             <a href="https://www.behance.net/gallery/133769401/Dodge-Challenger" target="_blank">
               <div class="work-img">
-                <img src="img/Dodge.jpg" alt="" class="img-fluid">
+                <img src="img/Challenger.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
