--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
         </div>
       </div>
     </div>
-    <!-- <footer>
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -794,7 +794,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </section>
   <!--/ Section Contact-footer End /-->
 
