--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Brayan Aguirre</title>
@@ -765,7 +765,7 @@
                       <!-- <li><a href=""><span class="ico-circle"><img src="img/facebook.png" alt=""></span></a></li> -->
                       <li><a href="https://www.instagram.com/_brayan19__/"><span class="ico-circle"><img src="img/logotipo-de-instagram.png" alt=""></span></a></li>
                       <li><a href="https://sketchfab.com/brayan.Aguirre"><span class="ico-circle"><img src="img/Sketcfab.png" alt=""></span></a></li>
-                      <li><a href="https://www.behance.net/brayanaguirre"><span class="ico-circle"><img src="img/behance.png" alt=""></i></span></a></li>
+                      <li><a href="https://www.behance.net/TheBrayan"><span class="ico-circle"><img src="img/behance.png" alt=""></i></span></a></li>
                     </ul>
                   </div>
                 </div>
