--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+        <!--<div class="col-md-4">
           <div class="work-box">
             <a href="https://sketchfab.com/3d-models/lucas-13248533dba349caa769a2445fd97f2e" target="_blank">
               <div class="work-img">
@@ -386,7 +386,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </div>-->
         <div class="col-md-4">
           <div class="work-box">
             <a href="https://www.behance.net/gallery/130957111/CV-animado" target="_blank">
