--- a/index.html
+++ b/index.html
@@ -363,30 +363,30 @@
             </a>
           </div>
         </div>
-        <!--<div class="col-md-4">
-          <div class="work-box">
-            <a href="https://sketchfab.com/3d-models/lucas-13248533dba349caa769a2445fd97f2e" target="_blank">
-              <div class="work-img">
-                <img src="img/Lucas1.png" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Lucas</h2>
+        <!--<div class="col-md-4">-->
+         <!-- <div class="work-box">-->
+           <!-- <a href="https://sketchfab.com/3d-models/lucas-13248533dba349caa769a2445fd97f2e" target="_blank">-->
+            <!--  <div class="work-img">-->
+             <!--   <img src="img/Lucas1.png" alt="" class="img-fluid">-->
+            <!--  </div>-->
+             <!-- <div class="work-content">-->
+              <!--  <div class="row">-->
+               <!--   <div class="col-sm-8">-->
+                   <!--  <h2 class="w-title">Lucas</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Modelo 3d</span> <!-- / <span class="w-date">18 Sep. 2018</span> -->
-                    </div>
-                  </div>
+                      <span class="w-ctegory">Modelo 3d</span>--> <!-- / <span class="w-date">18 Sep. 2018</span> -->
+                   <!--  </div>
+                  </div>-->
                   <!-- <div class="col-sm-4">
                     <div class="w-like">
                       <span class="ion-ios-plus-outline"></span>
                     </div>
                   </div> -->
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>-->
+               <!--  </div>-->
+              <!-- </div>-->
+            <!-- </a>-->
+          <!-- </div>-->
+        <!-- </div>-->
         <div class="col-md-4">
           <div class="work-box">
             <a href="https://www.behance.net/gallery/130957111/CV-animado" target="_blank">
@@ -764,7 +764,7 @@
                     <ul>
                       <!-- <li><a href=""><span class="ico-circle"><img src="img/facebook.png" alt=""></span></a></li> -->
                       <li><a href="https://www.instagram.com/_thebrayan_/"><span class="ico-circle"><img src="img/logotipo-de-instagram.png" alt=""></span></a></li>
-                      <li><a href="https://sketchfab.com/TheBrayan"><span class="ico-circle"><img src="img/Sketcfab.png" alt=""></span></a></li>
+                      <!--<li><a href="https://sketchfab.com/TheBrayan"><span class="ico-circle"><img src="img/Sketcfab.png" alt=""></span></a></li>-->
                       <li><a href="https://www.behance.net/TheBrayan"><span class="ico-circle"><img src="img/behance.png" alt=""></i></span></a></li>
                     </ul>
                   </div>
