--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://sketchfab.com/3d-models/fourarms-ben-10-da739c7a067644a0b97e93a6f12b9523" target="_blank">
+            <a href="https://www.behance.net/gallery/126578655/Fourarms-ben-10" target="_blank">
               <div class="work-img">
                 <img src="img/Fourarmas1.png" alt="" class="img-fluid">
               </div>
@@ -461,7 +461,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://sketchfab.com/3d-models/chuckles-el-cerdito-0bbf3acf2bea4861a68a8380240217cd" target="_blank">
+            <a href="https://www.behance.net/gallery/131873219/Chuckles-el-Cerdito" target="_blank">
               <div class="work-img">
                 <img src="img/Chuckles.png" alt="" class="img-fluid">
               </div>
@@ -763,9 +763,9 @@
                   <div class="socials">
                     <ul>
                       <!-- <li><a href=""><span class="ico-circle"><img src="img/facebook.png" alt=""></span></a></li> -->
-                      <li><a href="https://www.instagram.com/_thebrayan_/"><span class="ico-circle"><img src="img/logotipo-de-instagram.png" alt=""></span></a></li>
+                      <li><a href="https://www.instagram.com/_thebrayan_/"><span class="ico-circle"><img src="img/logotipo-de-instagram.png" alt="" target="_blank"></span></a></li>
                       <!--<li><a href="https://sketchfab.com/TheBrayan"><span class="ico-circle"><img src="img/Sketcfab.png" alt=""></span></a></li>-->
-                      <li><a href="https://www.behance.net/TheBrayan"><span class="ico-circle"><img src="img/behance.png" alt=""></i></span></a></li>
+                      <li><a href="https://www.behance.net/TheBrayan"><span class="ico-circle"><img src="img/behance.png" alt="" target="_blank"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
