--- a/index.html
+++ b/index.html
@@ -763,9 +763,9 @@
                   <div class="socials">
                     <ul>
                       <!-- <li><a href=""><span class="ico-circle"><img src="img/facebook.png" alt=""></span></a></li> -->
-                      <li><a href="https://www.instagram.com/_thebrayan_/"><span class="ico-circle"><img src="img/logotipo-de-instagram.png" alt="" target="_blank"></span></a></li>
+                      <li><a href="https://www.instagram.com/_thebrayan_/" target="_blank"><span class="ico-circle"><img src="img/logotipo-de-instagram.png" alt=""></span></a></li>
                       <!--<li><a href="https://sketchfab.com/TheBrayan"><span class="ico-circle"><img src="img/Sketcfab.png" alt=""></span></a></li>-->
-                      <li><a href="https://www.behance.net/TheBrayan"><span class="ico-circle"><img src="img/behance.png" alt="" target="_blank"></i></span></a></li>
+                      <li><a href="https://www.behance.net/TheBrayan" target="_blank"><span class="ico-circle"><img src="img/behance.png" alt=""></i></span></a></li>
                     </ul>
                   </div>
                 </div>
