--- a/index.html
+++ b/index.html
@@ -387,20 +387,20 @@
             <!-- </a>-->
           <!-- </div>-->
         <!-- </div>-->
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="https://www.behance.net/gallery/130957111/CV-animado" target="_blank">
-              <div class="work-img">
-                <img src="img/CV.png" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">CV animado</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Motion graphics</span> <!-- / <span class="w-date">18 Sep. 2018</span> -->
-                    </div>
-                  </div>
+      <!--  <div class="col-md-4">-->
+         <!-- <div class="work-box">-->
+           <!-- <a href="https://www.behance.net/gallery/130957111/CV-animado" target="_blank">-->
+             <!-- <div class="work-img">-->
+               <!-- <img src="img/CV.png" alt="" class="img-fluid">-->
+             <!-- </div>-->
+             <!-- <div class="work-content">-->
+               <!-- <div class="row">-->
+                <!--  <div class="col-sm-8">-->
+                  <!--  <h2 class="w-title">CV animado</h2>-->
+                   <!-- <div class="w-more">-->
+                    <!--  <span class="w-ctegory">Motion graphics</span>--> <!-- / <span class="w-date">18 Sep. 2018</span> -->
+                  <!--  </div>-->
+                 <!-- </div>-->
                   <!-- <div class="col-sm-4">
                     <div class="w-like">
                       <span class="ion-ios-plus-outline"></span>
