--- a/index.html
+++ b/index.html
@@ -205,21 +205,21 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><img src="img/Motion.png" alt=""></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">motion graphics</h2>
-              <p class="s-description text-center">
+        <!--<div class="col-md-4">-->
+          <!--<div class="service-box">-->
+            <!--<div class="service-ico">-->
+             <!-- <span class="ico-circle"><img src="img/Motion.png" alt=""></span>-->
+           <!-- </div>-->
+           <!-- <div class="service-content">-->
+             <!-- <h2 class="s-title">motion graphics</h2>-->
+              <!--<p class="s-description text-center">-->
                 <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
                 tempora perferendis eum non provident. -->
-            </p>
-            </div>
-          </div>
-        </div>
+           <!-- </p>-->
+           <!-- </div>-->
+         <!-- </div-->
+        <!--</div>-->
         <!-- <div class="col-md-4"> -->
           <!-- <div class="service-box"> -->
             <!-- <div class="service-ico"> -->
