--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <!-- </a>-->
           <!-- </div>-->
         <!-- </div>-->
-      <div class="col-md-4">
+      <!--<div class="col-md-4">
          <div class="work-box">
            <a href="https://www.behance.net/gallery/130957111/CV-animado" target="_blank">
              <div class="work-img">
@@ -398,8 +398,8 @@
                 <div class="col-sm-8">
                   <h2 class="w-title">CV animado</h2>
                    <div class="w-more">
-                    <span class="w-ctegory">Motion graphics</span> <!-- / <span class="w-date">18 Sep. 2018</span> -->
-                  </div>
+                    <span class="w-ctegory">Motion graphics</span> --> <!-- / <span class="w-date">18 Sep. 2018</span> -->
+                 <!-- </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -410,7 +410,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </div>-->
         <div class="col-md-4">
           <div class="work-box">
             <a href="https://unexecuted-pecks.000webhostapp.com/juego/" target="_blank">
