--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Ingeniero Multimedia apasionado con todo lo relacionado con arte digital, animaciones y videojuegos con habilidades en desarrollo web, modelado 3D, desarrollo de videojuegos y animación en 2D y 3D. Me caracterizo por trabajar en equipo y por adquirir conocimientos nuevos que puedan aportar tanto en el ámbito laboral como en el personal.
+                    Ingeniero en multimedia apasionado por la creación digital, las animaciones y los videojuegos, con habilidades en desarrollo web, modelado 3D, desarrollo de videojuegos y animación en 2D. Me distingo por mi capacidad para trabajar en equipo y mi continua búsqueda de nuevos conocimientos, los cuales aplico tanto en el ámbito laboral como en el personal.
                   </p>
                   <!-- <p class="lead">
                     Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
